--- a/less/pages/login.less
+++ b/less/pages/login.less
@@ -3,6 +3,7 @@
   
   body.login {
     background: @brand-primary;
+    -webkit-font-smoothing: subpixel-antialiased;
 
     .logo {
       .square(75px);
@@ -18,7 +19,7 @@
         small  {
             .opacity(100);
           a {
-            font-size: 13px;
+            font-size: 14px;
             color:#ffffff !important;
             .opacity(100);
           }
